# k23a-project

./: .gitignore  CMakeLists.txt  Doxyfile  Makefile  README.md  annotated.html  build_and_run.sh  classes.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_d44c64559bbebec7f509842c48db8b23.html  functions.html  functions_func.html  functions_vars.html  group__dict.html  group__htab.html  group__json__parser.html  group__lists.html  hash.h  index.html  lists.c  lists.h  main.c  makefile  menudata.js  modules.html  read_csv.c  read_csv.h  set-hooks.sh  spec_to_specs.c  spec_to_specs.c~  spec_to_specs.h  spec_to_specs_tests.c  structJSON__ENTITY.html  structLogReg.html  structSTS.html  structSpecEntry__s.html  structargument.html  structdict__t.html  structhtab__entry__s.html  structhtab__s.html  (+11 more)
.githooks/: pre-commit  pre-push
.github/workflows/: c-cpp.yml  push-docs.yml
docs/: annotated.html  classes.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_d44c64559bbebec7f509842c48db8b23.html  files.html  functions.html  functions_func.html  functions_vars.html  group__dict.html  group__htab.html  group__json__parser.html  group__lists.html  hash_8h_source.html  index.html  json__parser_8h_source.html  lists_8h_source.html  menudata.js  modules.html  spec__ids_8h_source.html  spec__to__specs_8h_source.html  structJSON__ENTITY.html  structSTS.html  structSpecEntry__s.html  structdict__t.html  structhtab__entry__s.html  structhtab__s.html
docs/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  enums_0.js  enums_1.js  enumvalues_0.js  enumvalues_1.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  groups_0.js  groups_1.js  groups_2.js  groups_3.js  pages_0.js  searchdata.js  typedefs_0.js  typedefs_1.js  typedefs_2.js  variables_0.js  variables_1.js  variables_2.js  variables_3.js  (+6 more)
include/: acutest.h  colours.h  hash.h  hset.h  job-scheduler.h  job_scheduler.h  json_parser.h  lists.h  logreg.h  ml.h  queue.h  read_csv.h  semaphore.h  spec_ids.h  spec_to_specs.h  tokenizer.h  unique_rand.h
objs/: Makefile
resources/: model.csv  output  unwanted-words.txt  user_dataset.csv  validation_set.csv  vocabulary.csv
resources/datasets/: sigmod_medium_labelled_dataset.csv  user_dataset.csv
resources/models/: dyn_model.csv  model_tfidf_100e.csv  the_holy_model.csv
resources/user_json_files/buy.net/: 5791.json
resources/vocabs/: vocabulary.csv
search/: all_1.js  all_10.js  all_11.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  enums_0.js  enums_1.js  enumvalues_0.js  enumvalues_1.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  (+18 more)
src/: Makefile  hash.c  hset.c  job-scheduler.c  job_scheduler.c  json_parser.c  lists.c  logreg.c  main.c  makefile  ml.c  queue.c  read_csv.c  read_csv_main.c  semaphore.c  spec_ids.c  spec_ids_main.c  spec_to_specs.c  tokenizer.c  unique_rand.c  user.c
tests/: Makefile  general_tests.c  hash_tests.c  hset_tests.c  job_scheduler_tests.c  json_parser_tests.c  lists_tests.c  logreg_tests.c  ml_tests.c  queue_tests.c  spec_to_specs_tests  spec_to_specs_tests.c  tokenizer_tests.c
tests-bin/: Makefile
